# vidbot_extension

./: .gitignore  .gitmodules  README.md  pyproject.toml
algos/: afford_algos.py  contact_algos.py  goal_algos.py  traj_algos.py  traj_optimizer.py
datasets/: desktop_dataset_import_summary.json  desktop_dataset_run_status.json  eval_trajectories.csv
datasets/IMG_1878/: selection.json  trajectories_summary.csv
datasets/IMG_1879/: selection.json
datasets/IMG_1880/: selection.json
datasets/IMG_1881/: diffuser_actor_trajectories_summary.csv  selection.json  trajectories_summary.csv
datasets/IMG_1884/: diffuser_actor_trajectories_summary.csv  selection.json
datasets/IMG_1885/: diffuser_actor_trajectories_summary.csv  selection.json  trajectories_summary.csv
datasets/IMG_1886/: diffuser_actor_trajectories_summary.csv  selection.json  trajectories_summary.csv
datasets/IMG_1887/: selection.json
datasets/IMG_1888/: diffuser_actor_trajectories_summary.csv  selection.json
demos/: infer_affordance.py  optimize_affordance.py
diffuser_utils/: dataset_utils.py  tensor_utils.py
models/: contact.py  goal.py  helpers.py  layers_3d.py
scripts/: download_ckpt_testdata.sh  estimate_depth.py  estimate_instrinsics.py  evaluate_trajectories.py  import_custom_dataset.py  prepare_third_party_modules.sh  run_imported_desktop_batch.py  visualize_pipeline.py  visualize_results.py
tests/: test_algos.py  test_clip.py  test_dataset_utils.py  test_device.py  test_guidance.py  test_models.py  test_mps_operations.py  test_tensor_utils.py
vidbot_utils/: __init__.py  device.py
(+50 files in other folders)
